<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected" />
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioMode0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode0"
                android:enabled="false" />

            <RadioButton
                android:id="@+id/radioMode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode1"
                android:enabled="false" />

            <RadioButton
                android:id="@+id/radioMode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mode2"
                android:enabled="false" />

             <RadioButton
            android:id="@+id/radioMode3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode3"
            android:enabled="false" />
            

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red" />

                <TextView
                    android:id="@+id/textViewRedvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="redvalue" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green" />

                <TextView
                    android:id="@+id/textViewGreenvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greenvalue" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:longClickable="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue" />

                <TextView
                    android:id="@+id/textViewBluevalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluevalue" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:longClickable="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewDelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delay" />

                <TextView
                    android:id="@+id/textViewDelayvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delayvalue" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:longClickable="false" />
        </LinearLayout>

    </LinearLayout>
    
	
	
</LinearLayout>
